--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -406,8 +406,12 @@ Characteristics of participants is summarized in @tbl-table1 .
                                   9 ~ "50 years or more", 
                                   77 ~ NA,
                                   99 ~ NA, 
-                                  
-                                  
+                                  ),
+          has_insurance = case_match(has_insurance, 
+                                  1 ~ "Yes",
+                                  2 ~ "No",
+                                  7 ~ "Refused",
+                                  9 ~ "Don't Know", 
                                   ),
           cough_3_month = case_match(cough_3_month,
                                      1 ~ "Yes"  ,
@@ -443,6 +447,13 @@ Characteristics of participants is summarized in @tbl-table1 .
                                      "3" ~ "High school graduate",
                                      "4" ~ "Some college or AA degree",
                                      "5" ~ "College graduate or above"),
+          education_adults = factor(education_adults, 
+                                    levels = c("College graduate or above",
+                                               "Some college or AA degree",
+                                               "High school graduate",
+                                               "9-11th grade",
+                                               "Less than 9th grade"
+                                                                 )),
           now_attending_school = case_match(now_attending_school,
                                           1 ~ "In school",
                                           2 ~ "Between grades",
@@ -475,6 +486,11 @@ Characteristics of participants is summarized in @tbl-table1 .
                                           3 ~ "Good",
                                           4 ~ "Fair",
                                           5 ~ "Poor"),
+          healthy_diet = factor(healthy_diet, levels = c("Excellent",
+                                                         "Very good",
+                                                         "Good",
+                                                         "Fair",
+                                                         "Poor")),
           vigorous_work = case_match(vigorous_work,
                                           1 ~ "Yes",
                                           2 ~ "No"),
@@ -521,7 +537,7 @@ Characteristics of participants is summarized in @tbl-table1 .
  label(table1$fev1) <- "FEV1 (L)"
  label(table1$fvc) <- "FVC (L)"
  label(table1$sex_text) <- "Biological Sex at Birth"
-  label(table1$birth_country) <- "Birth Country"
+ label(table1$birth_country) <- "Birth Country"
  label(table1$smoker_in_household) <- "Smoker in household"
  label(table1$maternal_smoke) <- "Maternal smoke during pregnancy (For youth)"
  label(table1$mineral_dusts) <- "Occupational Exposure to Mineral Dusts"
@@ -545,7 +561,7 @@ Characteristics of participants is summarized in @tbl-table1 .
           fev1 + fvc +
           smoker_in_household + maternal_smoke +
           mineral_dusts + organic_dusts + exhaust_fumes + other_fumes +
-          income_poverty_ratio + home_owner + 
+          income_poverty_ratio + home_owner + has_insurance +
           education_adults + now_attending_school + 
           healthy_diet + vigorous_work + moderate_work + vigorous_recreational + moderate_recreational + bmi 
           | age_group, table1, digits=2)
@@ -711,11 +727,11 @@ plot_racial_gap_change(refs_adult, refs_youth)
 
 #### Biological Sex
 
-We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 27% and 20% in adults, and 16% and 19% in youth, respectively (appendix @suppfig-females). In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 14% and 8% in adults, and 35% and 34% in youth (appendix @suppfig-males).
+We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 16% and 19% in youth, and by 27% and 20% in adults, respectively (appendix @suppfig-females). In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 35% and 34% in youth and by 14% and 8% in adults (appendix @suppfig-males).
 
 #### Home Ownership, BMI, and Occupation
 
-After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in @fig-racialgap-home-bmi-job. After limiting reference populations to non-obese homeowners without occupational exposures to dusts and fumes the racial gap in FEV~1~ and FVC was reduced by 20% and 16% in adults, and 21% and 19% in youth.
+After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in @fig-racialgap-home-bmi-job. After limiting reference populations to non-obese homeowners without occupational exposures to dusts and fumes the racial gap in FEV~1~ and FVC was reduced by 21% and 19% in youth and 20% and 16% in adults.
 
 ```{r, warning=FALSE, message=FALSE}
 #| label: fig-racialgap-home-bmi-job
@@ -818,13 +834,13 @@ return(refs)
 plot_racial_gap_change(createCohort3Factor("adult"), createCohort3Factor("youth"))
 ```
 
-In the supplementary material, we also explored the intersection of self-identified race and country of origin (@suppfig-usborn).
+In the supplementary material, we also explored the intersection of self-identified race and country of origin. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 24% and 25% in youth, and by 35% and 23% in adults among US born participants (@suppfig-usborn). Black and White individuals born outside of the US had higher FEV~1~ and FVC, were less exposed to second-hand and maternal smoking, had healthier diets, but also had more occupational exposures (@supptab-fig1byusborn). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (@supptab-fig1byusborn).
 
 ## Discussion
 
 Our results reinforce the critical role of environmental, social, and lifestyle factors in shaping health outcomes and suggest that a substantial portion of the racial gap in lung function can be explained by SDoH, with up to 26% of the gap in adults, and as much as 35% in males under 20 years of age, attributed to these factors. Our findings attribute a higher proportion of racial differences in lung function to social and environmental exposures than previously reported [@harik-khan2001; @harik-khan2004].
 
-The higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures) suggests that US-specific systemic factors such as racism, segregation, red-zoning, and other socio-economic inequities profoundly impact lung health. This aligns with several studies have reported significantly higher health burdens in US-born racialized people compared to racialized immigrants to the US [@doamekpor2015; @brown2017] and the growing body of literature that implicates historical and structural inequities, such as redlining and differential environmental exposures, in perpetuating health disparities among racialized communities in general [@nardone2020; @schuyler2022; @gaffney2021; @levy2018].
+The higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures) suggests that US-specific systemic factors such as racism, segregation, redlining, and other socio-economic inequities profoundly impact lung health. This aligns with several studies have reported significantly higher health burdens in US-born racialized people compared to racialized immigrants to the US [@doamekpor2015; @brown2017] and the growing body of literature that implicates historical and structural inequities, such as redlining and differential environmental exposures, in perpetuating health disparities among racialized communities in general [@nardone2020; @schuyler2022; @gaffney2021; @levy2018].
 
 Our analysis revealed that excluding individuals based on home ownership, BMI, and occupational exposures accounts for a significant portion of the explainable racial gap, indicating that financial stability, physical health, and work-related factors are pivotal contributors to lung function disparities.
 
@@ -886,13 +902,13 @@ flowchart TD
           birth_country + 
           smoker_in_household + maternal_smoke +
           mineral_dusts + organic_dusts + exhaust_fumes + other_fumes +
-          income_poverty_ratio + home_owner + 
+          income_poverty_ratio + home_owner + has_insurance +
           education_adults + now_attending_school + 
           healthy_diet + vigorous_work + moderate_work + vigorous_recreational + moderate_recreational + bmi 
           | race_text_nhanes, table1, digits=2)
 ```
 
-Characteristics of Participants Included in the Baseline Reference Population by self-identified race
+Characteristics of Participants Included in the Baseline Reference Population by Self-identified Race
 :::
 
 ### Separate Analysis by Biological Sex
@@ -939,6 +955,24 @@ plot_racial_gap_change(refs_adult_US_Black, refs_youth_US_Black)
 ```
 
 Racial gap in lung function among those born in the US
+:::
+
+::: {#supptab-fig1byusborn}
+```{r}
+table1_black <- table1 %>% 
+  filter(race_text_nhanes == "Non-Hispanic Black")
+
+table1(~ age + race_text_nhanes + sex_text + 
+          fev1 + fvc +
+          smoker_in_household + maternal_smoke +
+          mineral_dusts + organic_dusts + exhaust_fumes + other_fumes +
+          income_poverty_ratio + home_owner + has_insurance +
+          education_adults + now_attending_school + 
+          healthy_diet + vigorous_work + moderate_work + vigorous_recreational + moderate_recreational + bmi 
+          | birth_country+race_text_nhanes, table1, digits=2)
+```
+
+Characteristics of Black Participants Included in the Baseline Reference Population by Country of Birth
 :::
 
 ### Income to Poverty Ratio
